Prevent tooltips getting cut off (fixes #2) by using bootstrap

--- a/css/achilles.css
+++ b/css/achilles.css
@@ -291,19 +291,19 @@ div.personSummary .row div {
 
 .pathleaf {
 	font-size: 14px;
-	color: #fff;
+	color: #333;
 	font-weight: bold;
 	margin-bottom: 3px;
 }
 .pathleafstat {
 	font-size: 12px;
-	color: #ddd;
+	color: #666;
 	font-family: "Courier New";
 	margin-bottom: 2px;
 }
 .pathstep {
 	font-size: 12px;
-	color: #aaa;
+	color: #333;
 	margin-bottom: 1px;
 }
 hr.path {
@@ -387,4 +387,8 @@ table.dataTable tbody tr.odd.selected {
 }
 .sorting_3 {
 	background-color: rgba(89, 159, 216, 0.1) !important;
+}
+.popover {
+	max-width: 800px;
+	z-index: 1040;
 }
